Remove old projects

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <link href="http://fonts.googleapis.com/css?family=Roboto:400,100,700" rel="stylesheet">
 
-<style type="text/css">
+<style>
 html {
 	height:100%;
 }
@@ -149,27 +149,27 @@ p {
 		<h1>David Ra Youssef<div class="secondary"> Front End Developer with an eye for design</div></h1>
 		<ul>
 			<li>
-				<a href="front-end-dev-links/" target="_blank">
-					<img src="images/front-end-dev-links-thumb.jpg">
-					<p>Front-End Dev Links <span class="tech secondary">React</span><span class="mobile--type">responsive</span></p>
-				</a>
-			</li>
-			<li>
 				<a href="react-quiz/" target="_blank">
 					<img src="images/react-quiz-thumb.jpg">
 					<p>JavaScript Quiz <span class="tech secondary">React</span><span class="mobile--type">responsive</span></p>
 				</a>
 			</li>
 			<li>
+				<a href="front-end-dev-links/" target="_blank">
+					<img src="images/front-end-dev-links-thumb.jpg">
+					<p>Front-End Dev Links <span class="tech secondary">React</span><span class="mobile--type">responsive</span></p>
+				</a>
+			</li>
+			<li>
 				<a href="ng2-document-cms-ui/" target="_blank">
 					<img src="images/ng2-document-cms-ui-thumb.jpg">
-					<p>Document CMS UI 2 <span class="tech secondary">Angular 2/TypeScript</span><span class="mobile--type">responsive</span></p>
+					<p>Document CMS UI 2 <span class="tech secondary">Angular 2</span><span class="mobile--type">responsive</span></p>
 				</a>
 			</li>
 			<li>
 				<a href="react-redux-request-tracker/" target="_blank">
 					<img src="images/react-request-tracker-thumb.jpg">
-					<p>Trouble Ticket Tracker <span class="tech secondary">React/Redux</span><span class="mobile--type">responsive</span></p>
+					<p>Issue Tracker UI <span class="tech secondary">React/Redux</span><span class="mobile--type">responsive</span></p>
 				</a>
 			</li>
       <li>
@@ -190,25 +190,9 @@ p {
  					<p>Full Screen Gif Slider <span class="tech secondary">JavaScript</span><span class="mobile--type">fluid</span></p>
  				</a>
  			</li>
-<!-- 			<li>
-				<a href="blog/index.html" target="_blank">
-					<img src="images/blog-sample-1-thumb.jpg">
-					<p>Photo Blog <span class="tech secondary">WordPress</span></p>
-				</a>
-			</li> 	 -->
-<!-- 			<li>
-				<a href="dashboard-ui-2/index.htm" target="_blank">
-					<img src="images/dashboard-ui-2-thumb.jpg">
-					<p>Dashboard Sample 2 <span class="tech secondary">jQuery UI</span></p>
-				</a>
-			</li> -->
+
 			<div class="more">
-				<!-- <li>
-					<a href="angular-app/" target="_blank">
-						<img src="images/angular-app-thumb.jpg">
-						<p>Social Media API App <span class="tech secondary">AngularJS</span><span class="">responsive</span></p>
-					</a>
-				</li> -->
+
 				<li>
 					<a href="document-cms-ui-ember/index.htm#/workflow" target="_blank">
 						<img src="images/document-cms-ui-ember-thumb.jpg">
@@ -233,9 +217,13 @@ p {
 						<p>Print Design <span class="tech secondary">Adobe CS</span><span class="mobile--type">responsive</span></p>
 					</a>
 				</li>
+
 			</div>
+
 		</ul>
+
 		<button class="button-more" type="button">View More</button>
+
 	</div>
 </div>
 
