Add component library

--- a/index.html
+++ b/index.html
@@ -172,6 +172,18 @@ img {
 <main class="content">
 
 	<ul>
+			<li>
+					<a href="quark-components/" target="_blank">
+						<img src="images/component-library-thumb.jpg" alt="Component Library Thumbnail">
+						<div class="description">
+							<span class="title">Component Library</span>
+							<div class="detail">
+								<span class="tech secondary">React</span>
+								<span class="mobile--type">responsive</span>
+							</div>
+						</div>
+					</a>
+				</li>
 		<li>
 			<a href="vue-quiz/" target="_blank">
 				<img src="images/vue-quiz-thumb.jpg" alt="Vue Quiz Thumbnail">
@@ -255,21 +267,21 @@ img {
 				</div>
 			</a>
 		</li>
-		<li>
+		
+		<div class="more">
+			
+			<li>
 				<a href="full-screen-gif-slider/" target="_blank">
 					<img src="images/gif-slider-thumb.gif" alt="Gif Slider Thumbnail">
 					<div class="description">
 					<span class="title">Full Screen Gif Slider</span>
 					<div class="detail">
-						<span class="tech secondary">JavaScript</span>
+						<span class="tech secondary">jQuery</span>
 						<span class="mobile--type">fluid</span>
 					</div>
 				</div>
 				</a>
 			</li>
-
-		<div class="more">
-
 			<li>
 				<a href="document-cms-ui-ember/index.htm#/workflow" target="_blank">
 					<img src="images/document-cms-ui-ember-thumb.jpg" alt="Ember Document CMS UI Thumbnail">
